--- a/level-1/step-1/step-1.css
+++ b/level-1/step-1/step-1.css
@@ -12,8 +12,9 @@
 .content-left {
     width: 33.3%;
     /*this height is a placeholder. You will need to make some adjustment to get this container to look like the design */
-    height: 100px;
+    height: 100vh;
     background: #565555;
+    float:left;
 }
 
 
@@ -22,8 +23,9 @@
 .content-mid {
     width: 66.3%;
     /*this height is a placeholder. You will need to make some adjustment to get this container to look like the design */
-    height: 100px;
+    height: 100vh;
     background: #B0B0B0;
+    float:left;
 
 }
 
@@ -33,5 +35,6 @@
     width: 100%;
     height: 100px;
     background: #3A3A3A;
+    clear:both;
 
 }
