--- a/level-1/step-2/step-2.css
+++ b/level-1/step-2/step-2.css
@@ -3,18 +3,35 @@
 
 .profile-image-container {
     background: #96F0F2;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    height: 200px;
 }
 
 /* Step-2.2  One option to align this container to the center would be to give it a margin-left: auto; and margin-right: auto; */
 
 .profile-links-container {
     background: #12F3F7;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    height: 440px;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 
 /* Step-2.3  You can either use float left or position absolute to get this element to in the desired location */
 
 .logo-container {
     background: #4F4949;
+    width: 27%;
+    height: 60px;
+    margin left: 10px;
+    position: absolute;
+
+
 }
 
 
@@ -22,7 +39,8 @@
 
 .menu-container {
     background: #4F4949;
+    float:right;
+    width: 6%;
+    height: 60px;
+
 }
-
-
-
