--- a/level-1/step-1/step-1.css
+++ b/level-1/step-1/step-1.css
@@ -4,6 +4,8 @@
     width: 100%;
     height: 100px;
     background: #D8D8D8;
+    padding:20px;
+    padding-left: 30px;
 
 }
 
@@ -21,7 +23,7 @@
 /* Step-1.3 I would suggest using float to get this container in it's desired location. */
 
 .content-mid {
-    width: 66.3%;
+    width: 66.6%;
     /*this height is a placeholder. You will need to make some adjustment to get this container to look like the design */
     height: 100vh;
     background: #B0B0B0;
